# freqtrade

ai-derivs-signals/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
ai-derivs-signals/src/app/: main.py
ai-derivs-signals/src/app/static/: index.html
ai-derivs-signals/src/config/: settings.py
ai-derivs-signals/src/data/: ccxt_client.py  loader.py
ai-derivs-signals/src/features/: indicators.py
ai-derivs-signals/src/scripts/: backtest.py  export_signals.py  run_signals.py
ai-derivs-signals/src/signals/: generator.py
senior-assistant/: .gitignore  README.md  cloudflared.out  package-lock.json  package.json  render.yaml  server.js
senior-assistant/data/: lessons.json  user_lessons.json
senior-assistant/public/: admin.html  app.js  index.html  style.css
solana-backtester/: README.md  render.yaml  start.sh
solana-backtester/backend/: .env.example  requirements.txt
solana-backtester/backend/app/: main.py
solana-backtester/backend/app/engine/: backtester.py  metrics.py  templates.py
solana-backtester/backend/app/models/: database.py
solana-backtester/backend/app/routes/: ai.py  backtest.py  data.py  strategies.py
solana-backtester/backend/app/services/: ai_service.py  data_fetcher.py
solana-backtester/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
solana-backtester/frontend/src/: App.jsx  index.css  main.jsx
solana-backtester/frontend/src/services/: api.js
workout-tracker/: README.md  pyproject.toml  workout_tracker_app.py
workout-tracker/tests/: test_workout_tracker_app.py
(+24 files in other folders)
